backend systems implemented there's a lot of additions!

--- a/src/main/resources/assets/alorg/lang/en_us.json
+++ b/src/main/resources/assets/alorg/lang/en_us.json
@@ -1,5 +1,7 @@
 {
   "itemGroup.alorg": "ALOrg",
 
-  "entity.alorg.xorg": "Xorg"
+  "entity.alorg.xorg": "Xorg",
+
+  "block.alorg.goal": "Goal"
 }
