xorg can do stuff now!

--- a/src/main/resources/assets/alorg/lang/en_us.json
+++ b/src/main/resources/assets/alorg/lang/en_us.json
@@ -3,5 +3,7 @@
 
   "entity.alorg.xorg": "Xorg",
 
-  "block.alorg.goal": "Goal"
+  "block.alorg.goal": "Goal",
+
+  "item.alorg.alorg_tool": "ALOrg Tool"
 }
