Laying groundwork for automated training

--- a/src/main/resources/assets/alorg/lang/en_us.json
+++ b/src/main/resources/assets/alorg/lang/en_us.json
@@ -3,7 +3,8 @@
 
   "entity.alorg.xorg": "Xorg",
 
-  "block.alorg.goal": "Goal",
+  "block.alorg.goal": "Goal Block",
+  "block.alorg.training": "Training Block",
 
   "item.alorg.alorg_tool": "ALOrg Tool"
 }
