--- a/src/main/resources/assets/alorg/lang/en_us.json
+++ b/src/main/resources/assets/alorg/lang/en_us.json
@@ -14,6 +14,6 @@
   "command.alorg.invalid": "Invalid command!",
   "command.alorg.set.success": "Successfully set ID to: %d",
 
-  "message.alorg.id": "Xorg ID: %d",
-  "message.alorg.set_id": "Set Xorg ID to: %d"
+  "message.alorg.id": "ID: %d",
+  "message.alorg.set_id": "Set ID to: %d"
 }
